# paperquest_backend

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  main.py  pyproject.toml  ruff.toml
app/api/: routers.py
app/api/v1/: paper.py
app/common/: async_requests.py  enums.py  exceptions.py  misc.py  pydantic_model.py  registry.py  types.py
app/common/response/: __init__.py  response_base.py  response_code.py
app/core/: config.py  register.py
app/models/: __init__.py  base.py  paper_metadata.py
app/repositories/: paper_document.py  paper_metadata.py
app/schemas/: base.py  paper.py  paper_metadata.py
app/services/: paper_service.py
app/utils/: async_requests.py  misc.py  registry.py
tests/: misc.py
tests/api/v1/: paper.py
tests/data/: base.py  paper.py  paper_document.py  paper_metadata.py
tests/repositories/: test_paper_document_repository.py  test_paper_metadata_repository.py
tests/services/: test_paper_service.py
tests/session/: mongo.py
