[tool.poetry]
name = "paperquest-backend"
version = "0.1.0"
description = "This project is for providing enhanced paper searching service based on LLM's embedding."
authors = ["junhoPark <pjh3974@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.0"
beanie = "^1.25.0"
motor = "^3.4.0"
tabulate = "^0.9.0"
uvicorn = "^0.29.0"
transformers = "^4.39.2"
mongomock-motor = "^0.0.29"
google-cloud-storage = "^2.16.0"
aiohttp = "^3.9.3"
backoff = "^2.2.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pyright = "^1.1.356"
pre-commit = "^3.7.0"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
